--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,7 +2,7 @@
 # mostly done by trial and error. But I guess this formatting is "good enough"
 #
 
-version = 1.4.0
+version = 1.5.1
 
 project {
   #if you don't specify that files ending in .scala .sbt with $,
@@ -41,6 +41,8 @@ align {
     //tries to align types in the definitions of
     //defs when you have multiple parameter lists
     ":"
+
+    "extends"
 
     //sbt specific
     "%"
@@ -102,7 +104,9 @@ runner {
 rewrite {
   rules = [
     SortImports
+    SortModifiers
     # if your for has more than one single <- then it gets transformed into a multit-line curly brace one
     PreferCurlyFors
+
   ]
 }
