--- a/lab_07/simpleMovieServer/src/main/resources/reference.conf
+++ b/lab_07/simpleMovieServer/src/main/resources/reference.conf
@@ -1,10 +1,21 @@
-server.host = "localhost"
+server.host = "0.0.0.0"
 server.host = ${?SERVER_HOST}
 server.port = 3001
 server.port = ${?SERVER_PORT}
 
-initialuser.email = "mihai.simu@busymachines.com"
-initialuser.email = ${?INITIALUSER_EMAIL}
-initialuser.age = 28
-initialuser.age = ${?INITIALUSER_AGE}
+initialmovie.title = "Inception"
+initialmovie.title = ${?INITIALMOVIE_TITLE}
+initialmovie.year = 2010
+initialmovie.year = ${?INITIALMOVIE_YEAR}
+initialmovie.rating = 8.9
+initialmovie.rating = ${?INITIALMOVIE_RATING}
+
+psql.host = "localhost:5432"
+psql.host = ${?PSQL_HOST}
+psql.database = "mymoviedatabase"
+psql.database = ${?PSQL_DATABASE}
+psql.user = "mihai"
+psql.user = ${?PSQL_USER}
+psql.password = "qwerty"
+psql.password = ${?PSQL_PASSWORD}
 
